# Google-Meet-Bot

./: .env.example  .gitignore  .pypirc  LICENSE  README.md  join_google_meet.py  pyproject.toml  record_audio.py  requirements.txt  requirements1.txt  speech_to_text.py
src/google_meet_bot/: __init__.py  __main__.py  cli.py  join_google_meet.py  record_audio.py  speech_to_text.py
